# gaming_arcade

./: CMakeLists.txt  READ.md  ai.cpp  ai.h  first.cpp  main.cpp  mancala.cpp  mancala.h
